[package]
name = "pcd68"
authors = ["Jon Sharp <sharpjon@gmail.com>"]
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
web = ["wgpu/webgl"]
default = ["optimize"]

[build-dependencies]
cc = "1.0"

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "*"
wgpu = "*"
winit = "*"
winit_input_helper = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
pollster = "0.2"
