[package]
name = "pcd68"
authors = ["Jon Sharp <sharpjon@gmail.com>"]
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
web = ["wgpu/webgl"]
default = ["optimize"]

[build-dependencies]

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "*"
wgpu = "*"
winit = "*"
winit_input_helper = "*"
r68k-emu = { path = "../r68k/emu" }
r68k-tools = { path = "../r68k/tools" }
image = "*"
bdf = "*"
ndarray = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
web-sys = "0.3.56"

[target.'cfg(target_arch = "wasm32")']
rustflags = ["-C target-features=-crt-static"]
linker = "/opt/wasi-sdk-14.0/bin/clang"

# [dependencies.web-sys]
# version = "0.3.56"
# features = [ "console" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
pollster = "0.2"
